Clean up CMakeList

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,14 +5,7 @@ cmake_minimum_required(VERSION 2.8.10 FATAL_ERROR)
 ################################################################################
 # project metadata
 ################################################################################
-project(hpxio)
-
-set(HPXIO_MAJOR_VERSION 0)
-set(HPXIO_MINOR_VERSION 1)
-set(HPXIO_PATCH_LEVEL   0)
-set(HPXIO_VERSION "${HPXIO_MAJOR_VERSION}.${HPXIO_MINOR_VERSION}.${HPXIO_PATCH_LEVEL}")
-set(HPXIO_LIBRARY_VERSION "${HPXIO_VERSION}")
-
+project(hpx_HelloWorld)
 
 ################################################################################
 # Find and Include HPX
@@ -21,13 +14,13 @@ if(NOT HPX_ROOT)
    #  message("HPX_DIR not set, checking environment variables...")
    #  set(HPX_DIR $ENV{HPX_ROOT}/lib/cmake/hpx)
    #  if(NOT DEFINED HPX_DIR)
-   # message(FATAL_ERROR "HPX_ROOT not set, unable to find HPX!")
+   message(FATAL_ERROR "HPX_ROOT not set, unable to find HPX!")
    #  endif()
-     set(HPX_ROOT /usr/local)
+   #  set(HPX_ROOT /usr/local)
 endif()
 
 if(HPX_ROOT AND NOT HPX_DIR)
-   set(HPX_DIR "${HPX_ROOT}/lib/cmake/hpx")
+   set(HPX_DIR "${HPX_ROOT}/lib/cmake/HPX")
 endif()
 
 # Instruct cmake to find the HPX settings, it looks for HPXConfig.cmake in ${HPX_DIR}
